# customer-support-openenv

./: .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  test_env.py  test_models.py  test_tasks.py
customer_support_env/: README.md  models.py
customer_support_env/server/: app.py  customer_support_env_environment.py
customer_support_env/task_env/: tasks.py
server/: app.py  customer_support_env_environment.py
