[project]
name = "customer-support-env"
version = "0.1.0"
description = "A customer support RL environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
]

[project.scripts]
server = "customer_support_env.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"